--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,11 @@
 		<link rel="icon" type="image" href="/temp favi.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Pelao'Pro</title>
+		<title>Pelao'Pro🎯</title>
 	</head>
 	<body>
-		<h1>hola</h1>
+		<div class="Hero">
+			
+		</div>
 	</body>
 </html>
