--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,12 @@
 		<link rel="icon" type="image" href="/temp favi.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content="Pelao'Pro te ayuda a descubrir tu pasión, prepararte para la universidad y emprender desde joven." />
+		<meta name="keywords" content="emprendimiento, jóvenes, futuro, educación, universidad, innovación, panamá, becas" />
+		<meta name="author" content="PelaoPro" />
 		<title>Pelao'Pro🎯</title>
 	</head>
 	<body>
-		<div class="Hero">
-			
-		</div>
+		<h1>hola</h1>
 	</body>
 </html>
