--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,5 +16,8 @@ import  SpeedInsights  from "@vercel/speed-insights/astro"
 	</head>
 	<body>
 		<h1>hola</h1>
+		
+		<Analytics />
+    	<SpeedInsights />
 	</body>
 </html>
