--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,10 @@ import  SpeedInsights  from "@vercel/speed-insights/astro"
 		<title>Pelao'Pro🎯</title>
 	</head>
 	<body>
-		<h1>hola</h1>
 		
+		
+
+		//Data collection vercel
 		<Analytics />
     	<SpeedInsights />
 	</body>
