--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,16 +9,36 @@ import  SpeedInsights  from "@vercel/speed-insights/astro"
 		<link rel="icon" type="image" href="/temp favi.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<!-- SEO -->
 		<meta name="description" content="Pelao'Pro te ayuda a descubrir tu pasión, prepararte para la universidad y emprender desde joven." />
 		<meta name="keywords" content="emprendimiento, jóvenes, futuro, educación, universidad, innovación, panamá, becas" />
 		<meta name="author" content="PelaoPro" />
 		<title>Pelao'Pro🎯</title>
 	</head>
 	<body>
-		
-		
+		<!-- Nav Bar -->
 
-		//Data collection vercel
+		<!-- Hero -->
+
+		<!-- ¿Quienés somos? -->
+
+		<!-- 1rst Gen -->
+
+		<!-- Misión y Visión -->
+
+		<!-- ¿Qué hemos hecho? -->
+
+		<!-- Chatbot y Replicabilidad -->
+
+		<!--Testimonios -->
+
+		<!-- Contacto -->
+
+		<!-- Thanks -->
+
+		<!-- Footer -->
+		 
+		<!-- Data recolection from Vercel -->
 		<Analytics />
     	<SpeedInsights />
 	</body>
