--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Analytics from '@vercel/analytics/astro'
 import  SpeedInsights  from "@vercel/speed-insights/astro"
+import NavBar from "../components/Landing/NavBar.astro"
 ---
 
 <html lang="en">
@@ -16,8 +17,8 @@ import  SpeedInsights  from "@vercel/speed-insights/astro"
 		<title>Pelao'Pro🎯</title>
 	</head>
 	<body>
-		<!-- Nav Bar -->
-
+		<!-- NavBar -->
+		<NavBar></NavBar>
 		<!-- Hero -->
 
 		<!-- ¿Quienés somos? -->
