--- a/src/components/Landing/NavBar.astro
+++ b/src/components/Landing/NavBar.astro
@@ -1,5 +1,5 @@
 <h1>Hola</h1>
-<img src="https://cdn.jsdelivr.net/gh/PelaoPro/landing@main/Cloudfare/Animal_1.png" alt="Animal Image">
+<img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Animal_1.png" alt="Animal Image">
 <style>
     h1 {
         padding-top: 100px;
