--- a/src/components/Landing/NavBar.astro
+++ b/src/components/Landing/NavBar.astro
@@ -1,12 +1,1 @@
-<h1>Hola</h1>
-<img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Animal_1.png" alt="Animal Image">
-<style>
-    h1 {
-        padding-top: 100px;
-        text-align: center;
-        font-size: clamp(1rem,5rem,18rem);
-        font-family: Arial, Helvetica, sans-serif;
-        font-weight: bold;
-        margin: 0 0 20px 0;
-    }
-</style>
+<h1>Working</h1>
