--- a/src/components/Landing/NavBar.astro
+++ b/src/components/Landing/NavBar.astro
@@ -1,1 +1,4 @@
-<h1>Working</h1>
+<header class="header">
+    <a href="https://pelaopro.vercel.app/"><img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@latest/public/images/temp%20Logo_Black.png" alt="Logo" />
+    </a>
+</header>
