--- a/src/components/Landing/NavBar.astro
+++ b/src/components/Landing/NavBar.astro
@@ -35,13 +35,12 @@
         /*Margin, padding, sizing*/
         padding-top: 25px;
         margin-left: 10%;
+        padding-bottom: 10px;
         width: 100%;
-        
         /*Styles*/
         position: fixed;
         z-index: 1000;
         display: flex;
-        background: transparent;
         transition: all 0.5 ease;
     }
     .logo img {
