--- a/src/components/Landing/NavBar.astro
+++ b/src/components/Landing/NavBar.astro
@@ -11,7 +11,7 @@
            <li><a href="/replicabilidad">Replicabilidad</a></li>
            <li><a href="/chatbot">Chatbot</a></li>
            <li><a href="/faqs">FAQ's</a></li>
-           <li><a href="/apoyanos" style="background-color: chartreuse; padding-left: 10px; padding-right: 10px;">Apóyanos</a></li>
+           <li><a href="/apoyanos" style="font-weight: bold;">Apóyanos</a></li>
             <li><a href="#" class="x"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path></svg></a></li>
     </ul>
     <!-- Menu Icon -->
@@ -46,8 +46,7 @@
     .logo img {
         /*Size*/
         width: auto;
-        max-height: 45px;
-        min-height: 25px;
+        height: 45px;
     }
 /*Navbar*/
     .navbar {
@@ -77,7 +76,6 @@
     .navbar a:hover {
         /*Styles*/
         background-color: #d0ff0079;
-        box-sahdow: 0 0 0 20px #066400
         text-decoration: none;
     }
     .x {
@@ -113,12 +111,14 @@
         }
         .logo img {
             position: fixed;
+            height: 25px;
+            padding-top: 12px;
         }
         .hamburger {
             display: block;
             padding-top: 15px;
             position: absolute;
-            left: 80%;
+            left: 85%;
             transform: translateX(-80%);
         }
         .navbar {
@@ -138,7 +138,7 @@
             margin-right: 17%;
             /*Size*/
             width: 140px;
-            height: 45vh;
+            height: 35.5vh;
             border-radius: 10px;
             /*transition*/
             transition: all 0.5s ease;  
