--- a/src/components/Landing/Hero.astro
+++ b/src/components/Landing/Hero.astro
@@ -20,6 +20,7 @@
         z-index: 1;
         margin-top:50px;
     }
+
     /*Hero*/
     /*Fondo*/
     .HeroBack {
@@ -29,8 +30,8 @@
     .fondo {
         z-index: 1;
         width: 100%;
-        max-height: 554px;
-        min-height: 254px ;
+        max-height: 854px;
+        
         /*posicion*/
         position: absolute;
         top:40%;
@@ -41,8 +42,7 @@
         /*Persona 1*/
         .PersonaUno {
             /*Size*/
-            max-height: 650px;
-            min-height: 104px;
+            max-height: 800px;
             /*Posicion*/
             position: absolute;
             z-index: 90;
@@ -57,7 +57,8 @@
         /*Fondo*/
         .fondo {
             /*Posicion*/
-            top: 30%;
+            top: 25%;
+            height: 250px;
         }
         .PersonaUno {
             /*Size*/
@@ -76,11 +77,13 @@
             top: 20%;
             height: 450px;
         }
-}   .PersonaUno {
+ .PersonaUno {
             /*Size*/
             height: 480px;
             /*Posicion*/
             left: 43%;
             top: 3%;
             transform: translate(-45%, -5%);
+ }
+}
 </style>
