--- a/src/components/Landing/NavBar.astro
+++ b/src/components/Landing/NavBar.astro
@@ -108,6 +108,7 @@
     @media (max-width: 1080px) {
         header {
             margin-left: 5%;
+            margin-top: 20px;
         }
         .logo img {
             position: fixed;
